# simple-audio-player

./: CMakeLists.txt  LICENSE  README.md  simple-audio-player.desktop.in  simple-audio-player.qrc
include/: AddToPlaylistInterface.h  AlbumCollectionModel.h  AlbumTrackListModel.h  AppConfig.h  BaseCollectionModel.h  CoverArtTag.h  CoverImageProvider.h  FileSize.h  FileSystemModel.h  MusicCollectionList.h  PlaybackControlSystem.h  Player.h  PlayingList.h  PlaylistModel.h  SectionListModel.h  SelectionModel.h  SystemFileDialog.h  SystemMediaControl.h  TrackTag.h  config.h.in
include/dbus/: SAPMPris.h  SAPMPrisPlayer.h  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
include/network/: NetworkManager.h
include/options/: AboutDialog.h  LicenseDialog.h  SAPOptions.h
include/spotify/: CoverCache.h  EventCallback.h  SpotifyAPI.h  SpotifyAuthorizationPKCE.h  SpotifyHttpCodeListener.h  SpotifyPlaybackStatus.h  SpotifyPlayer.h  SpotifyPlaylist.h  SpotifyPlaylistItem.h  SpotifyPlaylistListModel.h  SpotifyReceivedPlaylistElement.h  SpotifyTokenSaver.h  SpotifyUserInfo.h  SpotifyUserPlaylistsListModel.h
include/windows/: ListenMediaKeys.h  SMTCInterface.h
js/: config.js  previousTrack.js  simple-audio-library.js
qml/: AlbumContentListView.qml  AlbumContentListViewAlbumInfoHeader.qml  AlbumContentListViewHeader.qml  AlbumListView.qml  AlbumsSection.qml  AudioFileContent.qml  Content.qml  FileSystemContextMenu.qml  FileSystemRowContent.qml  FileSystemView.qml  FileSystemViewHeader.qml  FolderPathLineEdit.qml  MainWindow.qml  MusicContent.qml  PlayList.qml  PlayListContent.qml  PlayListContentHeader.qml  PlayListContentSaveDialog.qml  PlayListContextMenu.qml  PlayPauseButton.qml  PlayerControl.qml  SidePanel.qml  StreamSlider.qml  SystemDialog.qml  SystemMediaControlItem.qml  TrackInformation.qml  TrackLabel.qml  TrackListRowBaseItem.qml
qml/spotify/: PreviousNextPlaylist.qml  SpotifyLoginScreen.qml  SpotifyMainView.qml  SpotifyPlaylistDetails.qml  SpotifyPlaylistDetailsHeader.qml  SpotifyPlaylistDetailsToolbar.qml  SpotifyPlaylistDetailsTracks.qml  SpotifyPlaylistTracksHeader.qml  SpotifyPlaylistView.qml  SpotifyUserPlaylist.qml  SpotifyUserProfile.qml  SpotifyUserProfileToolbar.qml
src/: AddToPlaylistInterface.cpp  AlbumCollectionModel.cpp  AlbumTrackListModel.cpp  AppConfig.cpp  BaseCollectionModel.cpp  CoverArtTag.cpp  CoverImageProvider.cpp  FileSize.cpp  FileSystemModel.cpp  MusicCollectionList.cpp  PlaybackControlSystem.cpp  Player.cpp  PlayingList.cpp  PlaylistModel.cpp  SectionListModel.cpp  SelectionModel.cpp  SystemFileDialog.cpp  SystemMediaControl.cpp  TrackTag.cpp  main.cpp
src/dbus/: SAPMPris.cpp  SAPMPrisPlayer.cpp
src/network/: NetworkManager.cpp
src/options/: AboutDialog.cpp  LicenseDialog.cpp  SAPOptions.cpp
src/spotify/: CoverCache.cpp  EventCallback.cpp  SpotifyAPI.cpp  SpotifyAuthorizationPKCE.cpp  SpotifyHttpCodeListener.cpp  SpotifyPlaybackStatus.cpp  SpotifyPlayer.cpp  SpotifyPlaylist.cpp  SpotifyPlaylistItem.cpp  SpotifyPlaylistListModel.cpp  SpotifyReceivedPlaylistElement.cpp  SpotifyTokenSaver.cpp  SpotifyUserInfo.cpp  SpotifyUserPlaylistsListModel.cpp
src/windows/: ListenMediaKeys.cpp  SMTCInterface.cpp
